<resources>
    <string name="app_name">FDApp</string>
    <string name="nav_home_title">Главная</string>
    <string name="nav_search_title">Поиск</string>
    <string name="nav_bag_title">Корзина</string>
    <string name="nav_profile_title">Аккаунт</string>
    <string name="location_title">Санкт-Петербург</string>
    <string name="date_title">12 Августа, 2023</string>
    <string name="category_item_title">Пекарни \nи кондитерское</string>
    <string name="second_activity_title">Азиатская кухня</string>
    <string name="dishes_title">Рис с овощами</string>
    <string name="tag_title">Все меню</string>
    <string name="tag_one">Все меню</string>
    <string name="dialog_title">Рыба с овощами и рисом</string>
    <string name="price_dialog">799</string>
    <string name="weight_dialog">560</string>
    <string name="description_dialog">Рыба маринованная со специями, лимонным соком, соевым соусом и запечeнная в духовке с лучком, томатами и картошечкой под золотистой майонезно-сырной шубкой</string>
    <string name="add_button_dialog">Добавить в корзину</string>
    <string name="w_dialog">г</string>
    <string name="p_dialog">₽</string>
    <string name="pay_button">Оплатить</string>
</resources>