<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="15dp"
    android:background="@drawable/dialog_fragment_background"
    app:cardBackgroundColor="@color/white"
    style="@style/CardView"
    app:strokeWidth="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_fragment_background">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView"
            android:layout_width="311dp"
            android:layout_height="232dp"
            android:backgroundTint="#F8F7F5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeWidth="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivDishesImageInDialog"
                    android:layout_width="198dp"
                    android:layout_height="204dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/dishes"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ivCloseButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@drawable/button_background"
                    android:paddingStart="8dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="8dp"
                    android:src="@drawable/ic_close_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"/>

                <ImageView
                    android:id="@+id/ivFavButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@drawable/button_background"
                    android:paddingStart="10dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="12dp"
                    android:src="@drawable/ic_favorite_button"
                    app:layout_constraintEnd_toStartOf="@+id/ivCloseButton"
                    app:layout_constraintTop_toTopOf="@id/ivCloseButton"
                    android:layout_marginEnd="8dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tvDialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/cardView"
            app:layout_constraintTop_toBottomOf="@id/cardView"
            android:text="@string/dialog_title"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"/>

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tvDialogTitle"
            app:layout_constraintTop_toBottomOf="@id/tvDialogTitle"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/tvPriceDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_dialog"
                android:textColor="@color/black"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p_dialog"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:layout_marginStart="4dp"/>

            <View
                android:layout_width="2dp"
                android:layout_height="2dp"
                android:background="@color/weight_color"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"/>

            <TextView
                android:id="@+id/tvWeightDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight_dialog"
                android:textColor="@color/weight_color"
                android:layout_marginStart="5dp"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/w_dialog"
                android:textSize="14sp"
                android:textColor="@color/weight_color"
                android:layout_marginStart="4dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tvDescriptionDialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/ll"
            app:layout_constraintTop_toBottomOf="@+id/ll"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            android:text="@string/description_dialog"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:textColor="@color/description_color"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/add_button_dialog"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescriptionDialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="14dp"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto"
            android:textSize="16sp"
            style="@style/button"
            android:backgroundTintMode="multiply"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>