<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ThirdActivity">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_location"
            android:layout_marginStart="6dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="8dp">

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/location_title"
                android:textColor="@color/black"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_title"
                android:textColor="@color/black_hex"
                android:fontFamily="@font/roboto"
                android:textSize="14sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end|center_vertical"
            android:layout_marginEnd="6dp">

            <ImageView
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:background="@drawable/profile_photo_background"
                android:src="@drawable/ic_person"/>
        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvOrderItem"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll"
        app:layout_constraintBottom_toTopOf="@+id/btnToPay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/order_item"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnToPay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pay_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvOrderItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bnvThird"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto"
        android:textSize="16sp"
        style="@style/button"
        android:backgroundTintMode="multiply"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bnvThird"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:elevation="0dp"
        app:itemIconSize="60dp"
        app:itemRippleColor="@android:color/transparent"
        app:itemActiveIndicatorStyle="@style/Widget.Design.BottomNavigationView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/navigation_menu"/>

</androidx.constraintlayout.widget.ConstraintLayout>